# Talos

./: .editorconfig  .gitignore  ARCHITECTURE.md  BUGS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DECISIONS.md  README.md  REGISTERS.md  ROADMAP.md  manual.md
.cache/clangd/index/: FramebufferView.cpp.7C5B900288CF7B3A.idx  FramebufferView.h.3B12A25582613E30.idx  HatariLauncher.cpp.BDF60C65BD6F6B72.idx  HatariLauncher.h.D912AD3AC065C2CD.idx  MachineState.cpp.FD17809909C46A9E.idx  MachineState.h.34C6A8518DDD671A.idx  MainWindow.cpp.50ED903E861AA95F.idx  MainWindow.h.DBC9D32BA90200FB.idx  RdbClient.cpp.2621AC3F142D4C94.idx  RdbClient.h.99EB2ABCFF04B19B.idx  main.cpp.3B5F9809E1200F7E.idx
client/: CMakeLists.txt  README.md
client/src/: main.cpp
client/src/app/: MainWindow.cpp  MainWindow.h
client/src/capture/: CaptureController.cpp  CaptureController.h  DisasmTracer.cpp  DisasmTracer.h  RegTraceController.cpp  RegTraceController.h
client/src/model/: BlitterTrace.cpp  BlitterTrace.h  BorderCodegen.cpp  BorderCodegen.h  DmaSndTrace.cpp  DmaSndTrace.h  GifWriter.cpp  GifWriter.h  Machine.h  MachineState.cpp  MachineState.h  MfpState.cpp  MfpState.h  Palette.h  RasterCodegen.cpp  RasterCodegen.h  ScrollerCodegen.cpp  ScrollerCodegen.h  Spectrum512.cpp  Spectrum512.h  StPicture.cpp  StPicture.h  SyncScroll.cpp  SyncScroll.h  WriteEvent.h
client/src/protocol/: MemCodec.h  RdbClient.cpp  RdbClient.h
client/src/session/: HatariLauncher.cpp  HatariLauncher.h
client/src/view/: AbCompareView.cpp  AbCompareView.h  BeamGeometry.cpp  BeamGeometry.h  BlitterTrafficView.cpp  BlitterTrafficView.h  BorderWalkthroughView.cpp  BorderWalkthroughView.h  CollapsibleDock.cpp  CollapsibleDock.h  DisasmView.cpp  DisasmView.h  DmaSoundView.cpp  DmaSoundView.h  FramebufferView.cpp  FramebufferView.h  LedToolButton.h  MfpView.cpp  MfpView.h  PaletteView.cpp  PaletteView.h  RasterWorkspace.cpp  RasterWorkspace.h  ReconstructView.cpp  ReconstructView.h  RegTimelineView.cpp  RegTimelineView.h  ScanlineBudgetView.cpp  ScanlineBudgetView.h  ScrollerWorkspace.cpp  ScrollerWorkspace.h  Spectrum512View.cpp  Spectrum512View.h  StPictureView.cpp  StPictureView.h  SyncScrollView.cpp  SyncScrollView.h
configs/: README.md
docs/phase-0/: environment.md  m0-client.md  tap-points.md
docs/phase-1/: beam-geometry.md  left-border.md  register-writes.md
docs/phase-2/: machine-region.md
harness/: README.md  ab_compare.py  anim_check.py  corpus.py  corpus.sh  diff_harness.py  intraline_split.py  raster_roundtrip.py  run-border.sh  run.sh  scroller_scroll.py
patches/: 0001-tap-blitter-traffic.patch  0002-tap-dma-lmc1992.patch  0003-remote-floppy-swap.patch  0004-remote-regtrace.patch  README.md
protocol/: README.md  b1-protocol.md
scripts/: bootstrap-hatari.sh  bootstrap-vasm.sh  build-effects.sh  check-deps.sh
tests/effects/: RASTER.PRG  README.md  blitfill.s  copper-bounce.s  copper.s  corpus-scroller.s  cycle-column.s  cycle.s  dmasound.s  lborder.s  megaspeed.s  multisplit.s  raster.json  raster.s  rasterbars.s  scroller.s  split.s
tests/effects/disk-blit/AUTO/: BLIT.PRG
tests/effects/disk-dma/AUTO/: DMA.PRG
tests/effects/disk-lborder/AUTO/: LB.PRG
tests/effects/disk-megaspeed/AUTO/: MSPEED.PRG
tests/effects/disk-multisplit/AUTO/: MULTI.PRG
tests/effects/disk-scroller/AUTO/: SCROLL.PRG
tests/effects/disk-split/AUTO/: SPLIT.PRG
tests/effects/disk/AUTO/: RBARS.PRG
tos/: README.md
